实现上拉加载更多功能

--- a/app.json
+++ b/app.json
@@ -36,6 +36,6 @@
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "看灵丘",
-    "navigationBarTextStyle": "black"
+    "navigationBarTextStyle": "black",
   }
 }
